# connectedhomeip

examples/bridge-app/echonetlinux/: AttributePropertyAdapter.cpp  BUILD.gn  Device.cpp  EchonetDevicesManager.cpp  EchonetDevicesManager.h  EchonetEndpoint.cpp  EchonetEndpoint.h  EchonetEndpointDefines.h  EchonetSelectModeSupportedModes.cpp  EchonetWindowCoveringDelegate.cpp  EchonetWindowCoveringDelegate_IHouse.cpp  Makefile  MatterMetaData.cpp  MatterMetaData.h  README.md  TimeManager.cpp  Utils.cpp  Utils.h  main.cpp  memcheck.txt  test.sh
examples/bridge-app/echonetlinux/data_processing/: chart_EVENTS.py  chart_FOUND_AN_ECHONET_ENDPOINT.py  chart_MEMORY_USAGE.py  chart_STARTUP_COUNT_DEVICE.py
examples/bridge-app/echonetlinux/data_processing/Figures/: adapters.json
examples/bridge-app/echonetlinux/data_processing/data/: 0_output_2024_02_13_startup_multiple_times.txt  0_output_2024_02_13_write_windows.txt  0_output_2024_02_15_startup_multiple_times.txt  20240216_time_write_chip_tool.txt  all_devices_matter_echonet_sumary.yml  chart_EVENTS.txt  chart_FOUND_AN_ECHONET_ENDPOINT.txt  chart_STARTUP_COUNT_DEVICE.txt  massif.out.22082
examples/bridge-app/echonetlinux/data_processing/data/massif/: massif.out.1565106  massif.out.1565144  massif.out.1565826  massif.out.1565863  massif.out.1677198  massif.out.1691494  massif.out.1694101
examples/bridge-app/echonetlinux/data_processing/datatool/: DataLoader.py
examples/bridge-app/echonetlinux/include/: AttributePropertyAdapter.h  Device.h  EchonetSelectModeSupportedModes.h  EchonetWindowCoveringDelegate.h  EchonetWindowCoveringDelegate_IHouse.h  TimeManager.h  main.h
examples/bridge-app/echonetlinux/include/delegates/: EchonetEndpointDelegate.h  EchonetEndpointDelegate_IHouseSwitch.cpp  EchonetEndpointDelegate_IHouseSwitch.h  EchonetEndpointDelegate_IHouseWindow.cpp  EchonetEndpointDelegate_IHouseWindow.h  EchonetEndpointDelegate_IHouseWindowCovering.cpp  EchonetEndpointDelegate_IHouseWindowCovering.h
examples/bridge-app/echonetlinux/include/openecho/: DeviceObject.cpp  Echo.cpp  EchoFrame.cpp  EchoNode.cpp  EchoObject.cpp  EchoProperty.h  EchoProtocol.cpp  EchoUDPProtocol.cpp  EchoUtils.cpp  NodeProfile.cpp  ProfileObject.cpp  a.out
examples/bridge-app/echonetlinux/results/: notestcpdump.txt  onoff.txt  startup.txt
examples/bridge-app/echonetlinux/results/start-up/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  all_echonet_info.txt
examples/bridge-app/echonetlinux/results/syncvsasync/: light chiptooltime.txt  light read async.txt  light read sync:.txt  light write async.txt  light write sync.txt  window chiptooltime.txt  window read async.txt  window read sync:.txt  window write async.txt  window write sync.txt
examples/bridge-app/echonetlinux/tcpdump/: newtcpdump  notes.txt  tcpdump_file_asyneR_asyneW_interval128  tcpdump_file_asyneR_asyneW_interval16  tcpdump_file_asyneR_asyneW_interval64  tcpdump_file_syncR_syncW
(+3 files in other folders)
