# Copyright (c) 2021 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/chip.gni")

import("${chip_root}/build/chip/tools.gni")

assert(chip_build_tools)

executable("chip-bridge-app") {
  sources = [
    "${chip_root}/examples/bridge-app/linux/bridged-actions-stub.cpp",
    "${chip_root}/examples/tv-app/tv-common/include/CHIPProjectAppConfig.h",

    #"${chip_root}/src/app/clusters/mode-select-server/mode-select-server.cpp",
    #"${chip_root}/src/app/clusters/window-covering-server/window-covering-server.cpp",

    #"${chip_root}/src/app/clusters/mode-select-server/supported-modes-manager.h",
    "AttributePropertyAdapter.cpp",
    "Device.cpp",
    "EchonetDevicesManager.cpp",
    "EchonetEndpoint.cpp",
    "EchonetEndpointDefines.h",
    "EchonetSelectModeSupportedModes.cpp",
    "EchonetWindowCoveringDelegate.cpp",
    "EchonetWindowCoveringDelegate_IHouse.cpp",
    "MatterMetaData.cpp",
    "TimeManager.cpp",
    "Utils.cpp",
    "include/Device.h",
    "include/delegates/EchonetEndpointDelegate_IHouseSwitch.cpp",
    "include/delegates/EchonetEndpointDelegate_IHouseWindow.cpp",
    "include/delegates/EchonetEndpointDelegate_IHouseWindowCovering.cpp",
    "include/main.h",
    "include/openecho/DeviceObject.cpp",
    "include/openecho/Echo.cpp",
    "include/openecho/EchoFrame.cpp",
    "include/openecho/EchoNode.cpp",
    "include/openecho/EchoObject.cpp",
    "include/openecho/EchoProperty.cpp",
    "include/openecho/EchoProtocol.cpp",
    "include/openecho/EchoSocket.cpp",
    "include/openecho/EchoStorage.cpp",
    "include/openecho/EchoUDPProtocol.cpp",
    "include/openecho/EchoUtils.cpp",
    "include/openecho/NodeProfile.cpp",
    "include/openecho/ProfileObject.cpp",
    "main.cpp",

    #"static-supported-modes-manager.cpp",
  ]

  deps = [
    #"${chip_root}/examples/bridge-app/bridge-common",
    #"${chip_root}/examples/all-clusters-app",
    "${chip_root}/examples/bridge-app/bridge-common",
    "${chip_root}/examples/platform/linux:app-main",
    "${chip_root}/src/lib",
  ]

  cflags = [
    "-Wconversion",
    "-Wunused-variable",
    "-Wno-unknown-warning-option",
  ]

  include_dirs = [
    "include",
    "${chip_root}/third_party/jsoncpp/repo/include",
  ]

  output_dir = root_out_dir
}

group("linux") {
  deps = [ ":chip-bridge-app" ]
}
